<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="david.ru.morza.util.Fragments.TextAndSend">


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/accent_material_dark"
        android:layout_weight="0.05"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1.5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/accent_material_dark"
                android:layout_weight="0.05"/>

            <Button
                android:id="@+id/btn_send"
                android:textColor="#fffff4fb"
                android:background="@color/accent_material_dark"
                android:layout_margin="5dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:onClick="onSend"
                android:text="@string/Send"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/accent_material_dark"
                android:layout_weight="0.025"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/accent_material_dark"
                android:layout_weight="0.025"/>

            <Button
                android:layout_width="0dp"
                android:textColor="#fffff4fb"
                android:background="@color/accent_material_dark"
                android:layout_margin="5dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/Number"
                android:id="@+id/btn_number"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/accent_material_dark"
                android:layout_weight="0.05"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/accent_material_dark"
        android:layout_weight="0.05"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/accent_material_dark"
            android:layout_weight="0.05"/>
        <TextView
            android:id="@+id/edit_number"
            android:textColor="@color/accent_material_dark"
            android:hint="@string/Number"
            android:textColorHint="@color/accent_material_dark"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:ems="10"
            android:gravity="center"
            android:layout_weight="3.5"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/accent_material_dark"
            android:layout_weight="0.05"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/accent_material_dark"
        android:layout_weight="0.05"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1.8">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/accent_material_dark"
            android:layout_weight="0.4"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:fillViewport="false">

            <TextView
                android:id="@+id/edit_message"
                android:textColor="@color/accent_material_dark"
                android:textSize="20dp"
                android:hint="@string/EnterMessage"
                android:textColorHint="@color/accent_material_dark"
                android:maxWidth="300dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isScrollContainer="true"
                android:gravity="left|top" />

        </ScrollView>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/accent_material_dark"
            android:layout_weight="0.4"/>

        <fragment
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:layout_margin="5dp"
            android:name="com.example.david.morza.fragment.Instruction"
            tools:layout="@layout/fragment_instruction" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/accent_material_dark"
            android:layout_weight="0.4"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/accent_material_dark"
        android:layout_weight="0.025"/>



</LinearLayout>